css/main.css
/* ... */
      @media (max-width: 1024px) {
        .section-title h2:before {
          bottom: -15px; } }
    .section-title h2:after {
      content: '';
      position: absolute;
      left: 0;
      bottom: -31px;
      width: 100px;
      height: 2px;
      background: #e45447; }
      @media (max-width: 1024px) {
        .section-title h2:after {
          bottom: -11px; } }
  .section-title p {
    max-width: 535px;
    margin-bottom: 0; }

.alert-msg {
  color: #008000; }

.primary-btn {
  color: #fff;
  padding: 0 25px;
  margin-right: 10px;
  background: #e45447;
  overflow: hidden;
  border-radius: 40px;
  font-size: 15px;
  font-weight: 600;
  display: inline-block;
  border: 1px solid #e45447;
  vertical-align: middle;
  position: relative;
  z-index: 1;
  cursor: pointer;
  text-align: center;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  backface-visibility: hidden;
  -webkit-transition: all 0.3s ease 0s;
  -moz-transition: all 0.3s ease 0s;
  -o-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s; }
  @media (max-width: 767px) {
    .primary-btn {
      padding: 0 35px; } }
  .primary-btn:before {
    content: attr(data-text);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding: 13px 0;
    -webkit-transition: all 0.3s ease 0s;
    -moz-transition: all 0.3s ease 0s;
    -o-transition: all 0.3s ease 0s;
    transition: all 0.3s ease 0s;
    -webkit-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
    -moz-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
    -o-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
    transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
    color: #fff; }
    @media (max-width: 767px) {
      .primary-btn:before {
        padding: 8px 0; } }
  .primary-btn:hover {
    background: #fff;
    border: 1px solid #e45447; }
    .primary-btn:hover:before {
      opacity: 0;
      -webkit-transform: translate3d(0, 100%, 0);
      -moz-transform: translate3d(0, 100%, 0);
      -ms-transform: translate3d(0, 100%, 0);
      -o-transform: translate3d(0, 100%, 0);
      transform: translate3d(0, 100%, 0); }
    .primary-btn:hover span {
      opacity: 1;
      color: #e45447;
      -webkit-transform: translate3d(0, 0, 0);
      -moz-transform: translate3d(0, 0, 0);
      -ms-transform: translate3d(0, 0, 0);
      -o-transform: translate3d(0, 0, 0);
      transform: translate3d(0, 0, 0); }
      .primary-btn:hover span:nth-child(1) {
        -webkit-transition-delay: 0.01s;
        -moz-transition-delay: 0.01s;
        -o-transition-delay: 0.01s;
        transition-delay: 0.01s; }
      .primary-btn:hover span:nth-child(2) {
        -webkit-transition-delay: 0.05s;
        -moz-transition-delay: 0.05s;
        -o-transition-delay: 0.05s;
        transition-delay: 0.05s; }
      .primary-btn:hover span:nth-child(3) {
        -webkit-transition-delay: 0.1s;
        -moz-transition-delay: 0.1s;
        -o-transition-delay: 0.1s;
        transition-delay: 0.1s; }
      .primary-btn:hover span:nth-child(4) {
        -webkit-transition-delay: 0.15s;
        -moz-transition-delay: 0.15s;
        -o-transition-delay: 0.15s;
        transition-delay: 0.15s; }
      .primary-btn:hover span:nth-child(5) {
        -webkit-transition-delay: 0.2s;
        -moz-transition-delay: 0.2s;
        -o-transition-delay: 0.2s;
        transition-delay: 0.2s; }
      .primary-btn:hover span:nth-child(6) {
        -webkit-transition-delay: 0.25s;
        -moz-transition-delay: 0.25s;
        -o-transition-delay: 0.25s;
        transition-delay: 0.25s; }
      .primary-btn:hover span:nth-child(7) {
        -webkit-transition-delay: 0.3s;
        -moz-transition-delay: 0.3s;
        -o-transition-delay: 0.3s;
        transition-delay: 0.3s; }
      .primary-btn:hover span:nth-child(8) {
        -webkit-transition-delay: 0.35s;
        -moz-transition-delay: 0.35s;
        -o-transition-delay: 0.35s;
        transition-delay: 0.35s; }
      .primary-btn:hover span:nth-child(9) {
        -webkit-transition-delay: 0.4s;
        -moz-transition-delay: 0.4s;
        -o-transition-delay: 0.4s;
        transition-delay: 0.4s; }
      .primary-btn:hover span:nth-child(10) {
        -webkit-transition-delay: 0.45s;
        -moz-transition-delay: 0.45s;
        -o-transition-delay: 0.45s;
        transition-delay: 0.45s; }
      .primary-btn:hover span:nth-child(11) {
        -webkit-transition-delay: 0.5s;
        -moz-transition-delay: 0.5s;
        -o-transition-delay: 0.5s;
        transition-delay: 0.5s; }
      .primary-btn:hover span:nth-child(12) {
        -webkit-transition-delay: 0.55s;
        -moz-transition-delay: 0.55s;
        -o-transition-delay: 0.55s;
        transition-delay: 0.55s; }
      .primary-btn:hover span:nth-child(13) {
        -webkit-transition-delay: 0.6s;
        -moz-transition-delay: 0.6s;
        -o-transition-delay: 0.6s;
        transition-delay: 0.6s; }
      .primary-btn:hover span:nth-child(14) {
        -webkit-transition-delay: 0.65s;
        -moz-transition-delay: 0.65s;
        -o-transition-delay: 0.65s;
        transition-delay: 0.65s; }
      .primary-btn:hover span:nth-child(15) {
        -webkit-transition-delay: 0.7s;
        -moz-transition-delay: 0.7s;
        -o-transition-delay: 0.7s;
        transition-delay: 0.7s; }
      .primary-btn:hover span:nth-child(16) {
        -webkit-transition-delay: 0.75s;
        -moz-transition-delay: 0.75s;
        -o-transition-delay: 0.75s;
        transition-delay: 0.75s; }
      .primary-btn:hover span:nth-child(17) {
        -webkit-transition-delay: 0.8s;
        -moz-transition-delay: 0.8s;
        -o-transition-delay: 0.8s;
        transition-delay: 0.8s; }
      .primary-btn:hover span:nth-child(18) {
        -webkit-transition-delay: 0.85s;
        -moz-transition-delay: 0.85s;
        -o-transition-delay: 0.85s;
        transition-delay: 0.85s; }
/* ... */

